fix: bg color on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
 }
 .primary-color{
   color: #0D7A7F;
